# yolov8_rknn_final

./: .gitignore  API测试记录表_2026-04-05.md  CMakeLists.txt  README.md  build-linux_RK3588.sh  run_with_ffmpeg_env.sh  运行.txt  运行说明.md
bytetrack/include/: BYTETracker.h  STrack.h  dataType.h  lapjv.h
bytetrack/src/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  lapjv.cpp
deepsort/: CMakeLists.txt
deepsort/include/: MyKalmanFilter.h  box.h  datatype.h  deepsort.h  featuretensor.h  hungarianoper.h  linear_assignment.h  matrix.h  model.hpp  munkres.h  mytime.h  nn_matching.h  resize.h  rknn_fp.h  track.h  tracker.h
deepsort/src/: deepsort.cpp  featuretensor.cpp  hungarianoper.cpp  kalmanfilter.cpp  linear_assignment.cpp  mytime.cpp  nn_matching.cpp  resize.cpp  rknn_fp.cpp  track.cpp  tracker.cpp
include/: algo_reporter.h  command_mpp.h  ffmpeg_rkmpp_reader.h  ffmpeg_with_mpp.h  http_ctrl_camera_io.h  http_ctrl_raw_video_rtsp.h  http_ctrl_web_utils.h  rk_common.h  rknnPool.hpp  rtsp_mpp_sender.h  v4l2_dmabuf_capture.h
model/RK3588/: 行人摔倒.rknn
src/: algo_reporter.cpp  ffmpeg_rkmpp_reader.cpp  http_ctrl_camera_io.cpp  http_ctrl_raw_video_rtsp.cpp  http_ctrl_web_utils.cpp  main.cc  main_http_ctrl.cc  postprocess.cc  rtsp_mpp_sender.cpp  v4l2_dmabuf_capture.cpp
tools/: drmprime_rtsp_push_test.cpp  e2e_drmprime_probe.c  test_video_dma.sh
